# layerengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux_installer.sh  build_mac_installer.sh  install.sh  installer.nsi  mingw-toolchain.cmake
.github/workflows/: auto-release.yml  build.yml  cross-build.yml  lint.yml  release.yml
Source/: GranularLayer.cpp  GranularLayer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
universal/LayerEngine.vst3/Contents/Resources/: moduleinfo.json
website/: index.html
